--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server",
+    "webpack": "webpack",
     "start": "webpack",
     "lint": "eslint src/**/*.js"
   },
@@ -16,11 +17,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.12.0",
     "eslint-config": "^0.3.0",
-    "eslint-config-prettier": "^3.4.0",
+    "eslint-config-prettier": "^3.5.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.15.3",
     "swc": "^1.0.0-beta.20",
     "swc-loader": "^0.1.0",
